Bug 350183 - [regression] Back / Forward icons not vertically aligned anymore; too high. r+a=mconnor.

--- a/mozilla/browser/themes/pinstripe/browser/browser.css
+++ b/mozilla/browser/themes/pinstripe/browser/browser.css
@@ -276,6 +276,11 @@ toolbar:not([mode="text"]) #forward-button .toolbarbutton-menubutton-dropmarker 
   margin-top: 1px;
 }
 
+toolbar[mode="icons"] #back-button .toolbarbutton-text-box,
+toolbar[mode="icons"] #forward-button .toolbarbutton-text-box {
+  display: none;
+}
+
 /* ----- DEFAULT PRIMARY TOOLBAR BUTTONS ----- */	
 
 /* ----- DEFAULT BACK BUTTON ----- */	
